// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager delete secrets "frodo config-manager delete secrets --dry-run -n esv-josh-secret": should print a dryrun message deleting a secret by name from cloud." 1`] = `""`;

exports[`frodo config-manager delete secrets "frodo config-manager delete secrets --dry-run -n esv-josh-secret": should print a dryrun message deleting a secret by name from cloud." 2`] = `
"Experimental feature in use: 'frodo config-manager delete secrets'. This feature may change without notice.
Dry run: Deleting secret: esv-josh-secret
"
`;

exports[`frodo config-manager delete secrets "frodo config-manager delete secrets -n esv-josh-secret": should delete a specific secret by name from cloud. 1`] = `""`;

exports[`frodo config-manager delete secrets "frodo config-manager delete secrets -n esv-josh-secret": should delete a specific secret by name from cloud. 2`] = `
"Experimental feature in use: 'frodo config-manager delete secrets'. This feature may change without notice.
Deleted secret: esv-josh-secret
"
`;
